min height for backlog and squash some annoying drag bugs

--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -134,7 +134,7 @@ button.home {
 #backlog {
   background: #FAFAFA;
   .backlog-box {
-    min-height: 75px;
+    min-height: 300px;
   }
 }
 #skeletons {
